# emotion_screen

./: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: gfx.c.406CD252A5267D3D.idx  gfx.h.4B82947246F2C213.idx  jpeg_decoder.c.A1F3D515574447AF.idx  jpeg_decoder.h.C024CB8DD0425523.idx  main.c.CDD1452E3D0F1784.idx  mjpeg_player.c.CA29F8F2931856FD.idx  mjpeg_player.h.BE034A5AB9280AB0.idx  qmi8658.c.FAE5013278259FD9.idx  qmi8658.h.BADB9C511D44B12F.idx  sdcard.c.FE1DC15C471B4143.idx  sdcard.h.79DFAEB73866B66F.idx  st7789.c.CEE3DE332BC044B4.idx  st7789.h.47EE87D3A7EB3863.idx
.claude/: settings.local.json
main/: CMakeLists.txt  audio_player.c  audio_player.h  gfx.c  gfx.h  idf_component.yml  main.c  mjpeg_player.c  mjpeg_player.h  qmi8658.c  qmi8658.h  rc522.c  rc522.h  sdcard.c  sdcard.h  st7789.c  st7789.h
